<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aiw"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mu"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:textSize="20sp"
            android:textColor="@color/purple_200"/>
    </LinearLayout>


</LinearLayout>